tests/parse_print/random_perturb/set01/delete-01/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/delete-01/delete-01.essence:1:1:
unexpected laguage
expecting end of input, language, or statement
    laguage Essence 1.3
    ^